packages/svelte/tests/validator/samples/class-state-constructor-6/input.svelte.js
export class Counter {
	count = $state(0);
	constructor() {
		this['count'] = $state(0);
	}
}
