packages/svelte/tests/compiler-errors/samples/export-derived-state-indirect/main.svelte.js
let count = $state(0);

const double = $derived(count * 2);

export { double };
